--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "leaflet": "^1.8.0",
     "node-sass": "^7.0.1",
